--- a/activity5/index.html
+++ b/activity5/index.html
@@ -28,6 +28,53 @@
     </ul>
 
     <!-- Your code here -->
+    Copy
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Opcion 1 <span class="sr-only"></span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Opcion 2</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Opcion 3
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Option 3.1</a>
+          <a class="dropdown-item" href="#">Option 3.2</a>
+        </div>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+  <div class="row">
+    <div class="col-sm-12 col-md-8" style="background-color: red;">
+    main content space
+    </div> 
+    <div class="col-sm-12 col-md-4" style="background-color: blue;">
+    right bar
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-12" style="background-color: gray;"> 
+      footer
+    </div>
+  </div>
+
+
+
+
+
+
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
