--- a/activity1/index.html
+++ b/activity1/index.html
@@ -8,6 +8,32 @@
     <title>Activity 1: CSS styling</title>
     <!-- Your styles here -->
     <style>
+       #first_block{
+        width:100%;
+        margin-bottom: 10px;
+        border-width: 1px;
+        border-color: black;
+        border-style:solid;
+              
+      }
+
+      #second_block{
+        width: 50%;
+        font-weight: bold;
+        background-color: red;
+        margin-bottom: 1em;
+        border-style:solid;
+               
+      }
+
+      .third_block{
+        width: 50%;
+        background-color: yellow;
+        color:blue;
+        padding: 1rem;
+      }
+
+
     </style>
   </head>
   <body>
