--- a/activity2/index.html
+++ b/activity2/index.html
@@ -12,10 +12,45 @@
        border: 1px solid #000;
        height: 500px;
      }
+     #first_block {
+      width: 100px;
+      height: 50px;
+      background-color: red;
+      right: 0;
+      position: absolute;
+      top:0;
+      overflow: hidden;
+    }
+
+    #second_block {
+      width: 100px;
+      height: 50px;
+      background-color: blue;
+      position: relative;
+      top:0;
+      left: 0;
+      overflow:scroll;
+    }
+    .third_block {
+      width: 50%;
+      background-color: grey;
+      position: absolute;
+      bottom:0%;
+      left:0;
+    }
+    #container{
+      position:relative;
+      width: 100%;
+      height:200px;
+      background-color:green;
+    }
+
+    .fourth_block {
+      width: 50%;
+      background-color:rgb(230, 126, 143);
+      }
     </style>
-    <!-- Your styles here -->
-    <style>
-    </style>
+
   </head>
   <body>
     <h1>Activity 2: CSS positioning</h1>
